	- Fix weapons with reload animations adding an extra 1-20s to the reload time, based on fire anim length.
	- Add new 'postFireChargeAnim' field for weapons with charge animations to specify if the animation should play in reverse to deactivate the weapon after firing.
	- Fix weapons with reload sounds using oneShotSound = false immediately stopping the SFX when switching to a different weapon.
	- Missiles:
		- Add 'cruiseRangeTrigger' field to Missiles. Missiles using this will delay firing Cruise motor until within set distance to target.
		- Tweak acoustic propagation loss rate for passive acoustic torpedoes, should have a bit further effective detection range now.
		- Fix INS guidance ordinance not configured with a datalink immediately triggering the lost lock condition and self-destructing.
- RWP:
	- For S6R10, GM kill craft that lack propulsion and are significantly beyond the asteroid field radius.
	- Adjust attraction of asteroids beyond 90% of the field radius to not clump together at the centre so that they don't kill the sole surviving craft.
	- Add craft spawn warning message if craft doesn't have AI/WM on root part, and root isn't a cockpit.

v1.7.1.0
IMPROVEMENTS / FIXES
- General:
	- Add a SimpleRepaint MM patch to ignore incompatible parts.
	- Fix typos and duplicates in the changelog.
- Armor:
	- Add a max armor limit slider (under General Slider Settings) to limit the max thickness of armor. Default: unclamped.
- UI:
	- Team Icon text now scales with icon scale.
- AI:
	- Orbital AI:
		- Adds ability to use controllable sidemounted engines as RCS thrusters.
		- Add toggles to disable use of RCS for translation and rotation.
		- Adds Zero-throttle firing range setting that will override maneuvering orientation in favor of pointing ship in attack Vector direction within set distance.
		- AI now takes target acceleration/velocity into account when accelerating to engagement speed/killing velocity.