@@ -24,10 +24,12 @@
 	- Fix weapons with reload animations adding an extra 1-20s to the reload time, based on fire anim length.
 	- Add new 'postFireChargeAnim' field for weapons with charge animations to specify if the animation should play in reverse to deactivate the weapon after firing.
 	- Fix weapons with reload sounds using oneShotSound = false immediately stopping the SFX when switching to a different weapon.
+	- Fix weapons with spindown anims when they stop firing that have overheated under AI control not spinning down until they've cooled down.
 	- Missiles:
 		- Add 'cruiseRangeTrigger' field to Missiles. Missiles using this will delay firing Cruise motor until within set distance to target.
 		- Tweak acoustic propagation loss rate for passive acoustic torpedoes, should have a bit further effective detection range now.
 		- Fix INS guidance ordinance not configured with a datalink immediately triggering the lost lock condition and self-destructing.
+		- Passive Sonar torpedoes now home in on loudest part, not COM.
 - RWP:
 	- For S6R10, GM kill craft that lack propulsion and are significantly beyond the asteroid field radius.
 	- Adjust attraction of asteroids beyond 90% of the field radius to not clump together at the centre so that they don't kill the sole surviving craft.
